...
  );
  const keyExtractor = useCallback((item: Lottery) => item.id, []);

  const Header = (
    <Animated.View style={[styles.header, headerAnimatedStyle]}>
      <View style={styles.title}>
        <Text style={styles.titleText}>Lotteries</Text>
        <MaterialIcons name="casino" size={36} color="black" />
      </View>
      <View style={styles.searchContainer}>
        <SearchInput searchTerm={searchTerm} onChange={onSearchChange} />
        <LotteriesSortingButton />
      </View>
...
